Implement Game Screen Design and Logic, End Screen Design and Logic

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@ body {
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: -moz-scrollbars-vertical;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 code {
