Final UI Refinements before deployment

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@
 
 .base-timer__label {
   position: absolute;
+  color: #ffffff;
 
   /* Size should match the parent container */
   width: 300px;
